ECOSUI-1231 - fixed page style (journal overflow)"

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -35,6 +35,10 @@
   }
 
   &-content {
+    & > .ecos-journal-page > .ecos-journal {
+      overflow-x: unset;
+      overflow-y: unset;
+    }
   }
 
   &-footer {
